--- a/assets/templates/email-verification.html
+++ b/assets/templates/email-verification.html
@@ -66,7 +66,7 @@
 <div class="container">
     <h1>Verify your email address</h1>
     <p>
-        Thanks for starting the <b>Dxpire</b> account creation process. We want to make sure it’s really you.
+        Thanks for starting the <b>SomeApp</b> account creation process. We want to make sure it’s really you.
         Please enter the following verification code when prompted.
         If you don't want to create an account, you can ignore this message.
     </p>
@@ -78,7 +78,7 @@
     </div>
 
     <div class="footer">
-        <b>Dxpire</b> will never email you and ask you to disclose or verify your password,
+        <b>SomeApp</b> will never email you and ask you to disclose or verify your password,
         credit card, or banking account number.
     </div>
 </div>
